# mygeodemo

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.md  ipyleaflet.ipynb  make.bat
src/mygeodemo/: __init__.py  mygeodemo.py
tests/: test_mygeodemo.py
