[tool.poetry]
name = "mygeodemo"
version = "0.0.1"
description = "Tutorial for extending python packages"
authors = ["winstonyym"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10"
ipyleaflet = ">=0.16.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
jupyter = ">=1.0.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
myst-nb = {version = "^0.16.0", python = "^3.7"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
